tests/vendor/invalid/semantics/postfix_decr_non_lvalue.c
//tags: simple, decrement, increment
int main() {
    int a = 10;
    return a++--;
}